--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <li>
                 <a href="#">Tecnología e informática</a>
                 <ul>
-                    <li><a href="#">Período uno</a></li>
-                    <li><a href="#">Período dos</a></li>
+                    <li><a href="">Período uno</a></li>
+                    <li><a href="tecnologia.html">Período dos</a></li>
                     <li><a href="#">Período tres</a></li>
                    
                    
