--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -57,7 +57,7 @@
 
 <div class="texto">
    
-    <div  class="titulo">INICIO</div><br>
+    <div  class="titulo">Tecnología e informática</div><br>
 
 
 </div>
