--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -58,7 +58,16 @@
 <div class="texto">
    
     <div  class="titulo">Tecnología e informática</div><br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis at laborum delectus inventore nobis ipsa nesciunt ratione veritatis? Maxime tempora dolorum ad suscipit accusantium sit quis fugiat minus ea sint.
 
+<div class="imgtec3"></div>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus fugit doloremque modi, omnis tenetur placeat, iusto consequuntur quam inventore ut possimus veniam ratione. Nihil consequuntur quis, cupiditate veniam possimus exercitationem!
+
+<iframe style="margin-left: 300px;" width="560" height="315" src="https://www.youtube.com/embed/K8QaOFiFDps?si=cKKjUKzwmamyAZeZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed repellendus quos magnam! Reprehenderit, eligendi, ea fuga voluptatem dolor quia pariatur placeat soluta, similique amet vel? Perspiciatis, accusamus tempora. Voluptatem, illum.
+<iframe style="float: right;" src="https://drive.google.com/file/d/1k9snJ6T1fTCh0LoZw3n5OMyNkId1mFOI/preview" width="640" height="480" allow="autoplay"></iframe>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente molestias nulla sunt nobis. Harum earum sequi, quas illum obcaecati tempora excepturi quasi eligendi, soluta repellendus quibusdam asperiores inventore quae perspiciatis?
+<iframe style="float: left;" src="https://drive.google.com/file/d/1ysqqR2x84oirnb-wMPu-wkNcN8zqnHcP/preview" width="240" height="120" allow="autoplay"></iframe>
 
 </div>
 
