--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -58,16 +58,21 @@
 <div class="texto">
    
     <div  class="titulo">Tecnología e informática</div><br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis at laborum delectus inventore nobis ipsa nesciunt ratione veritatis? Maxime tempora dolorum ad suscipit accusantium sit quis fugiat minus ea sint.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae debitis illum perferendis aperiam ut repudiandae, sed delectus expedita temporibus molestias nostrum. Voluptas consequuntur voluptatem aperiam recusandae quam sit maiores delectus?
 
 <div class="imgtec3"></div>
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus fugit doloremque modi, omnis tenetur placeat, iusto consequuntur quam inventore ut possimus veniam ratione. Nihil consequuntur quis, cupiditate veniam possimus exercitationem!
+<br><br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officia amet fugiat molestiae assumenda similique dolorum ipsum corporis mollitia dolorem maxime provident dolore temporibus doloremque non vitae ipsam, est nihil.
 
-<iframe style="margin-left: 300px;" width="560" height="315" src="https://www.youtube.com/embed/K8QaOFiFDps?si=cKKjUKzwmamyAZeZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed repellendus quos magnam! Reprehenderit, eligendi, ea fuga voluptatem dolor quia pariatur placeat soluta, similique amet vel? Perspiciatis, accusamus tempora. Voluptatem, illum.
-<iframe style="float: right;" src="https://drive.google.com/file/d/1k9snJ6T1fTCh0LoZw3n5OMyNkId1mFOI/preview" width="640" height="480" allow="autoplay"></iframe>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente molestias nulla sunt nobis. Harum earum sequi, quas illum obcaecati tempora excepturi quasi eligendi, soluta repellendus quibusdam asperiores inventore quae perspiciatis?
-<iframe style="float: left;" src="https://drive.google.com/file/d/1ysqqR2x84oirnb-wMPu-wkNcN8zqnHcP/preview" width="240" height="120" allow="autoplay"></iframe>
+<iframe style="margin-left: 500px;" width="500" height="300" src="https://www.youtube.com/embed/K8QaOFiFDps?si=_AO4Vc_ZzG1FTEJb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, nisi nulla doloremque similique sequi expedita molestias. Eligendi quibusdam dolorum ullam impedit ducimus, repudiandae exercitationem numquam quod, perferendis placeat consequuntur illo!
+<iframe style="float: right;" src="https://drive.google.com/file/d/1SicrsIf6XFkG2QVrPD-knE7C824CQvzz/preview" width="400" height="280" allow="autoplay"></iframe>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quis aliquid provident, natus repellendus veniam quae laudantium quos eius maiores quasi neque reiciendis, veritatis vel, molestias accusantium exercitationem nesciunt suscipit.
+<br>
+<div>AUDIO UNO</div>
+<iframe style="margin-left: 200px;" src="https://drive.google.com/file/d/1Jpa3w6nqR5LQjhmOy1ZHdfDcU6REPB1R/preview" width="240" height="50" allow="autoplay"></iframe>
+
+
 
 </div>
 
